[project]
name = "lr8"
version = "0.1.0"
description = "Python package for lab8 MTP"
authors = [
    {name = "ivankrtulgu",email = "218090641+ivankrtulgu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "lr8", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (<9)",
    "build (>=1.3.0,<2.0.0)",
    "twine (>=6.2.0,<7.0.0)"
]
